--- a/python/server/lib/user_cache/ECY_config.ini
+++ b/python/server/lib/user_cache/ECY_config.ini
@@ -1,34 +1,35 @@
 [installed_completor]
 lib.sources.label.Label = label
+lib.sources.path.path = path
 lib.sources.python.python = python_jedi
-lib.sources.lsp_servers.html = html_lsp
 lib.sources.snippets.snippets = snippets
-lib.sources.lsp_servers.vim = vim_lsp
+lib.sources.lsp_servers.html = html_lsp
+lib.sources.youcompleteme.ycm = youcompleteme
+lib.sources.pygment.pygment = pygment
 
 [filetype_using]
 nothing = label
+vim = path
+leaderf = label
+fugitive = label
+gitcommit = youcompleteme
 python = python_jedi
-vim = label
 nerdtree = label
-dosini = label
-leaderf = snippets
-c = label
-html = html_lsp
-java = label
-help = label
-ctrlp = label
-conf = label
 markdown = label
 text = label
-javascript = label
-json = label
-map = label
+help = label
+xhtml = label
 php = label
-xhtml = html_lsp
-rst = label
-fugitive = label
+html = html_lsp
+plaintex = snippets
+jsp = label
+dosini = snippets
 log = label
-go = label
-css = label
-tags = label
+javascript = label
+json = path
+snippets = label
+man = label
+c = label
+ale-fix-suggest = label
+ale-preview = label
 
