--- a/autoload/so.in
+++ b/autoload/so.in
@@ -6,6 +6,7 @@ so D:/gvim/vimfiles/myplug/ECY_new/autoload/diagnosis.vim
 so D:/gvim/vimfiles/myplug/ECY_new/autoload/completion_preview_windows.vim
 so D:/gvim/vimfiles/myplug/ECY_new/autoload/color_completion.vim
 so D:/gvim/vimfiles/myplug/ECY_new/autoload/choose_sources.vim
+so D:/gvim/vimfiles/myplug/ECY_new/autoload/goto.vim
 so D:/gvim/vimfiles/myplug/ECY_new/autoload/ECY_Install.vim
 so D:/gvim/vimfiles/myplug/ECY_new/autoload/ECY_main.vim
 
